# describe_me

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  release.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
benches/: snapshot_bench.rs
describe_me_plugin_sdk/: Cargo.toml
describe_me_plugin_sdk/src/: lib.rs
docs/: application-layer.md  architecture.md  branding.md  cli.md  config.reference.toml  domain-layer.md  infrastructure-layer.md  logging.md  roadmap.md  shared-slices.md  supply-chain.md  testing.md  updates.md  web-security.md
docs/Roadmap_steps/: extensions.md
docs/utilisateurs/: guide.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_apk_output.rs  parse_apt_line.rs  parse_dnf_output.rs  parse_mountinfo.rs  parse_proc_net.rs  parse_systemd_line.rs
infras/: Makefile  README.md  Vagrantfile
packaging/config/: config.toml
packaging/debian/: postinst  postrm  prerm
packaging/systemd/: describe-me.service
plugin-examples/certificates/: Cargo.toml
plugin-examples/certificates/src/: main.rs
scripts/release-helper/: Cargo.toml
scripts/release-helper/src/: main.rs
snapshot/: snapshot_part1.txt  snapshot_summary.txt
src/: lib.rs  shared.rs
src/application/: exposure.rs  extensions.rs  health.rs  logging.rs  metadata.rs  mod.rs  net.rs  shared.rs  web.rs
src/application/web/: mod.rs  security.rs  sse.rs  template.rs  updates_cache.rs
src/application/web/assets/: main.js  mod.rs
src/application/web/assets/js/: background-grid.js  bootstrap.js  disk-utils.js  drag.js  preamble.js  sse.js  tags-editor.js  token.js  ui.js
src/application/web/security/: auth.rs  limits.rs  mod.rs  session.rs  sse.rs
src/application/web/templates/: index.css  index.html  updates.css  updates.html
src/application/web/templates/partials/: footer.html  header.html  main_layout.html  primary_grid.html  raw.html  services.html  sockets.html  token_overlay.html
src/application/web/templates/styles/: animations.css  base.css  components.css  grid.css  light-theme.css  overlays.css  variables.css
src/cli/: opts.rs
src/domain/: config.rs  error.rs  mod.rs  model.rs
src/examples/: config.toml  config_http.toml  config_tls.toml  disk_usage.rs  print_json.rs
src/infrastructure/: mod.rs  storage.rs  sysinfo.rs  systemd.rs  updates.rs
src/infrastructure/net/: linux.rs
tests/: cli_validation.rs  config_validation.rs  disk_smoke.rs  js_disk_bar.rs  smoke.rs  systemd_parse_prop.rs  ui_blur.rs
tests/js/: disk-utils.test.js
