[package]
name = "describe_me"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Décrit rapidement un serveur (CPU, RAM, OS, uptime, services…), pour admins système."
readme = "README.md"
repository = "https://github.com/Max-Perso/describe_me"
keywords = ["system", "monitoring", "sysinfo", "server"]
categories = ["system", "command-line-utilities"]

[package.metadata]
msrv = "1.90.0"

[lib]
name = "describe_me"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
systemd = []
cli = ["dep:anyhow", "dep:clap", "serde"]
# pour tests/fuzz uniquement; n'active rien en prod
internals = []
config = ["serde", "dep:toml"]   # <— NEW
net = []
web = ["dep:tokio", "dep:axum", "dep:tokio-stream", "serde"]  # NEW     

[dependencies]
thiserror = "1.0"
sysinfo = { version = "0.30", default-features = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"], optional = true }
tokio-stream = { version = "0.1", optional = true }   

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
serde_json = "1.0"

[[bin]]
name = "describe-me"
path = "src/bin/describe-me.rs"
required-features = ["cli"]
