[package]
name = "describe_me_plugin_sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDK minimal pour écrire des extensions describe-me."
repository = "https://github.com/Max-Perso/describe_me"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
